# latency-seismometer

./: .gitmodules  Cargo.toml
measure/: ec2-add-icmp-sg.sh  ec2-import-key-to-all-regions.sh  ec2-launch-all-regions.sh  ec2-show-all-regions.sh  ec2-terminate-all-regions.sh  extract-matrix.py  gen-all.sh  gen_inventory.py  ips.txt  nodes.ini  plot_hist.py
measure/app/: _setup.yml  build.yml  pinger.py  reset.yml  run.yml
measure/group_vars/: all.yml
measure/viewer/: package-lock.json  viewer.js
measure/viewer/public/: index.html
src/: pinger.rs
