[package]
name = "latency-seismometer"
version = "0.1.0"
authors = ["Determinant <tederminant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.9.0"
fastping-rs = "0.2.2"
log = "0.4.14"

[[bin]]
name = "ls-pinger"
path = "src/pinger.rs"

[[bin]]
name = "ls-matrix"
path = "src/matrix.rs"
